# spec-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
history/prompts/1-basic-calc/: 001-basic-calc-spec-creation.spec.prompt.md  002-basic-calc-plan-creation.plan.prompt.md  003-basic-calc-task-generation.tasks.prompt.md  004-basic-calc-implementation.green.prompt.md  005-basic-calc-git-commit.misc.prompt.md
history/prompts/constitution/: 001-pycalc-constitution-initial.constitution.prompt.md
specs/1-basic-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-basic-calc/checklists/: requirements.md
specs/1-basic-calc/contracts/: cli-interface.md
src/pycalc/: __init__.py  calculator.py  cli.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_calculator.py
